WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295818
[Absolute Positioning] Fix css-grid/abspos/descendant-static-position-00{1,2}
https://bugs.webkit.org/show_bug.cgi?id=295818
Summary
[Absolute Positioning] Fix css-grid/abspos/descendant-static-position-00{1,2}
Sammy Gill
Reported
2025-07-11 16:09:57 PDT
We are computing an incorrect static position that results in an incorrectly sized and located inset modified containing block
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-07-11 16:11:13 PDT
<
rdar://problem/155650719
>
Sammy Gill
Comment 2
2025-07-11 16:21:05 PDT
<
rdar://problem/147367378
>
Sammy Gill
Comment 3
2025-07-11 16:22:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47850
Sammy Gill
Comment 4
2025-07-14 11:20:38 PDT
rdar://problem/155650719
EWS
Comment 5
2025-07-15 10:09:26 PDT
Committed
297403@main
(221d56a321d6): <
https://commits.webkit.org/297403@main
> Reviewed commits have been landed. Closing PR #47850 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug